# image-subtraction

./: .gitignore  CMakeLists.txt  README.md  async_operation.cpp  async_operation.h  file_operations.cpp  file_operations.h  image.cpp  image.h  image_subtraction.cpp  image_subtraction.h  main.cpp  test.cpp  test.h  test_base.cpp  test_base.h  test_file_operations.cpp  test_file_operations.h  test_image_subtraction.cpp  test_image_subtraction.h
